Work on lesson091.

--- a/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj
+++ b/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="lesson090.cpp" />
+    <ClCompile Include="lesson091.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
