--- a/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj.filters
+++ b/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="lesson090.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="lesson091.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
