Work on lesson092.

--- a/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj
+++ b/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="lesson090.cpp" />
     <ClCompile Include="lesson091.cpp" />
+    <ClCompile Include="lesson092.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
