Work on lesson093 to 8:00.

--- a/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj
+++ b/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="lesson090.cpp" />
     <ClCompile Include="lesson091.cpp" />
     <ClCompile Include="lesson092.cpp" />
+    <ClCompile Include="lesson093.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
