Work on lesson094 to 13:20.

--- a/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj
+++ b/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="lesson091.cpp" />
     <ClCompile Include="lesson092.cpp" />
     <ClCompile Include="lesson093.cpp" />
+    <ClCompile Include="lesson094.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
