--- a/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj
+++ b/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="lesson092.cpp" />
     <ClCompile Include="lesson093.cpp" />
     <ClCompile Include="lesson094.cpp" />
+    <ClCompile Include="lesson095.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
