--- a/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj.filters
+++ b/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="lesson094.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="lesson095.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
