No code for lesson096.

--- a/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj.filters
+++ b/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="lesson095.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="lesson096.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
