--- a/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj
+++ b/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="lesson094.cpp" />
     <ClCompile Include="lesson095.cpp" />
     <ClCompile Include="lesson096.cpp" />
+    <ClCompile Include="lesson097.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
