--- a/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj.filters
+++ b/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="lesson096.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="lesson097.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
