--- a/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj.filters
+++ b/Rahmat_M_CompleteCpp20VisualPractical_Section08.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="lesson097.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="lesson098.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
